mixins and para

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,9 +1,13 @@
 // Mixins in here
 .nav-text(){
 text-decoration:none;
-color:black;
+color:@shark;
 }
 
 
 //Parametric mixin
-.button
+.button{
+    border-radius:12px;
+    font-size: @button-font;
+
+}
