--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+.button {
+  border-radius: 12px;
+  font-size: 1.2rem;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -167,6 +171,10 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+nav a {
+  text-decoration: none;
+  color: #212529;
 }
 .footer {
   width: 100%;
